feat: complete scalable pipeline with Java 21 & 24 cores optimization, update README with execution logs